🐛 fix styling issues on iPhone

--- a/src/components/heading/heading.styl
+++ b/src/components/heading/heading.styl
@@ -7,9 +7,6 @@ h4
   a
     text-decoration none !important
 
-  span
-    white-space nowrap
-
 h2
   @extend $font-bold
   font-size $font-size-huge
@@ -22,4 +19,5 @@ h3
   text-align center
 
 h4
+  @extend $font-bold
   font-size $font-size-subhead
