--- a/src/components/section/block.styl
+++ b/src/components/section/block.styl
@@ -1,6 +1,5 @@
 .block
   flex 1 1 100%
-  text-align center
   @media up_to_M
     + .block
       margin-top $space-large
